add option for phoneme alignment in kaldiasr

--- a/process.ipynb
+++ b/process.ipynb
@@ -187,7 +187,6 @@
    "cell_type": "markdown",
    "id": "552d11cd-58cb-4204-b4c0-f217c59313e6",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -4442,7 +4441,6 @@
    "cell_type": "markdown",
    "id": "bfd5ead2-6aaf-4650-bc48-46db1e7e98cb",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -5839,7 +5837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "b659af49-04b3-40e2-bb1b-0c921d33e65c",
    "metadata": {},
    "outputs": [],
@@ -5849,14 +5847,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "671a7f00-13fc-4de2-bc45-e882052e2efd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('/media/Windows/root/AusKidTalkv2/samples/children/output/s0_325/325_task1_186.wav','r')\n",
-    "d = check_output(['docker','run','-i','kaldi-word:v1','bash','decode.sh'], stdin=f)\n",
+    "f = open('/media/Windows/root/AusKidTalkv2/samples/1234.wav','r')\n",
+    "data = check_output(['docker','run','-i','kaldi-word:v2.1','bash','decode_P.sh','--align-ph','false'], stdin=f)\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "dda380d7-7180-4761-a050-41cd4629c566",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_52709/931465895.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ascii'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m';'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+     ]
+    }
+   ],
+   "source": [
+    "x,y = d.decode('ascii').split(';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "34249823-166c-4bbd-9190-9a12578f06d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bPhoneme=False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cc23339f-516e-453c-a4dc-ac42063d7080",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'false'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(bPhoneme).lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a5a2d0a1-cb70-4424-8da4-aceb6a8ec048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from io import StringIO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4abdfae6-2e99-4c3f-9fd4-21a9b63995c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "initial_value must be str or None, not bytes",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_52709/1666472608.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mStringIO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: initial_value must be str or None, not bytes"
+     ]
+    }
+   ],
+   "source": [
+    "StringIO(d)"
    ]
   },
   {
@@ -5871,17 +5954,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "427a9e10-8d89-4ed5-aa1e-9b6d9a5ac9ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "docker run -i kaldi-word:v2.1 bash decode_P.sh\n"
+     ]
+    }
+   ],
    "source": [
-    "response, _ = kaldi_stt.stt_audio_file('/media/Windows/root/AusKidTalkv2/samples/children/output/s0_325/325_task1_186.wav')"
+    "response_w, response_p = kaldi_stt.stt_audio_file('/media/Windows/root/AusKidTalkv2/samples/neighbourhood.wav',imageName='kaldi-word:v2.1',suffix='_P',bPhoneme=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
+   "id": "85456111-31ec-4060-a25b-671faf633ad2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fileName</th>\n",
+       "      <th>channel</th>\n",
+       "      <th>startTime</th>\n",
+       "      <th>dur</th>\n",
+       "      <th>symb</th>\n",
+       "      <th>conf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tmpSpeech.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>sil</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tmpSpeech.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>neighborhood</td>\n",
+       "      <td>0.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tmpSpeech.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.47</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>sil</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        fileName  channel  startTime   dur          symb  conf\n",
+       "0  tmpSpeech.wav        1       0.00  0.51           sil  1.00\n",
+       "1  tmpSpeech.wav        1       0.51  0.96  neighborhood  0.83\n",
+       "2  tmpSpeech.wav        1       1.47  0.54           sil  1.00"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "32446d13-a757-42b0-9e5f-7ee45501426c",
    "metadata": {},
    "outputs": [
@@ -5920,25 +6094,79 @@
        "      <td>tmpSpeech.wav</td>\n",
        "      <td>1</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.53</td>\n",
+       "      <td>0.51</td>\n",
        "      <td>sil</td>\n",
-       "      <td>0.88</td>\n",
+       "      <td>1.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>tmpSpeech.wav</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>one</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>n</td>\n",
        "      <td>1.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>tmpSpeech.wav</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.26</td>\n",
-       "      <td>0.75</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>ey</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tmpSpeech.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>b</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tmpSpeech.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>er</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>tmpSpeech.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.02</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>hh</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>tmpSpeech.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.14</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>uh</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>tmpSpeech.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.29</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>d</td>\n",
+       "      <td>0.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>tmpSpeech.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.47</td>\n",
+       "      <td>0.54</td>\n",
        "      <td>sil</td>\n",
        "      <td>1.00</td>\n",
        "    </tr>\n",
@@ -5948,18 +6176,24 @@
       ],
       "text/plain": [
        "        fileName  channel  startTime   dur symb  conf\n",
-       "0  tmpSpeech.wav        1       0.00  0.53  sil  0.88\n",
-       "1  tmpSpeech.wav        1       0.54  0.72  one  1.00\n",
-       "2  tmpSpeech.wav        1       1.26  0.75  sil  1.00"
+       "0  tmpSpeech.wav        1       0.00  0.51  sil  1.00\n",
+       "1  tmpSpeech.wav        1       0.51  0.21    n  1.00\n",
+       "2  tmpSpeech.wav        1       0.72  0.12   ey  1.00\n",
+       "3  tmpSpeech.wav        1       0.84  0.12    b  1.00\n",
+       "4  tmpSpeech.wav        1       0.96  0.06   er  1.00\n",
+       "5  tmpSpeech.wav        1       1.02  0.12   hh  1.00\n",
+       "6  tmpSpeech.wav        1       1.14  0.15   uh  1.00\n",
+       "7  tmpSpeech.wav        1       1.29  0.18    d  0.96\n",
+       "8  tmpSpeech.wav        1       1.47  0.54  sil  1.00"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response"
+    "response_p"
    ]
   },
   {
@@ -6304,7 +6538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
